--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="info">
                 <p id="distance">Awaiting location...</p>
-                <p id="coordinates" class="coords-info">Target: 59.310°, 18.007°</p>
+                <p id="coordinates" class="coords-info">Target: ALL TIME HIGH</p>
                 <p id="error" class="error-message"></p>
             </div>
         </main>
